--- a/app/src/main/res/layout/screen.xml
+++ b/app/src/main/res/layout/screen.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitXY"
         android:src="@drawable/images"/>
