--- a/app/src/main/res/layout/reservation.xml
+++ b/app/src/main/res/layout/reservation.xml
@@ -142,8 +142,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0석" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
