--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -49,6 +49,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="예약 현황"
+        android:textAllCaps="false"
+        android:layout_below="@+id/lgbtn"
+        android:layout_alignStart="@+id/lgbtn"
+        android:layout_alignEnd="@+id/sigbtn" />
+
 </RelativeLayout>
 
 
